--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 body {
   background-color: #f8e8a6;
+  text-align: center;
+}
+a {
+  padding: 10px;
+  color: green;
+}
+img {
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 100%;
 }
